--- a/SmartBox/MainPage.xaml
+++ b/SmartBox/MainPage.xaml
@@ -8,28 +8,25 @@
             Padding="50,10"
             Spacing="25">
             <Image
-                Source="dotnet_bot.png"
+                Source="download.png"
                 HeightRequest="165"
                 Aspect="AspectFit"
                 SemanticProperties.Description="dot net bot in a submarine number ten" />
 
             <Label
-                Text="Hello, World! My Name is Jeremy"
+                Text="Hello, World!&#10; Wellcome to Smart Box"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
+            <Label />
+            
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                x:Name="SmartBoxDisplay"
                 Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                SemanticProperties.HeadingLevel="Level2" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+
+
         </VerticalStackLayout>
     </ScrollView>
 
